--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,3 +1,6 @@
-<% provide(:title, "") %>
+<% provide(:title, "Top") %>
+<div class="center jumbotron">
     <h1>勤怠管理システム</h1>
     <p>このアプリケーションでは、勤怠情報の閲覧・登録・編集ができます</p>
+    <%= link_to "Sign up", '#', class: "btn btn-lg btn-primary" %>
+</div>
